# poseidon2-pvm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
bench-onchain/: README.md  measure_reftime.sh
circuits/: README.md
crates/merkle-contract/: Cargo.toml
crates/merkle-contract/.cargo/: config.toml
crates/merkle-contract/abi/: MerkleTree.sol
crates/merkle-contract/src/: main.rs
crates/params-gen/: Cargo.toml
crates/params-gen/src/: main.rs
crates/poseidon2-pvm/: Cargo.toml
crates/poseidon2-pvm-contract/: Cargo.toml
crates/poseidon2-pvm-contract/src/: lib.rs
crates/poseidon2-pvm/benches/: hash_bench.rs  hashing.rs
crates/poseidon2-pvm/src/: field.rs  lib.rs  merkle.rs  poseidon2.rs  rescue.rs  sponge.rs
crates/poseidon2-pvm/src/params/: bn254.rs  mod.rs
crates/poseidon2-pvm/tests/: vectors.rs
crates/poseidon2-pvm/tests/test_vectors/: poseidon2_bn254_t3.json
docs/: parameters.md
examples/groth16-merkle/: README.md
tools/gen-params/: Cargo.toml
tools/gen-params/src/: main.rs
