[package]
name = "params-gen"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic, auditable generation of Poseidon2 / Rescue-Prime parameters for poseidon2-pvm."

[dependencies]
poseidon2-pvm = { path = "../poseidon2-pvm", features = ["std"] }
